--- a/vignettes/ii-authentication.Rmd
+++ b/vignettes/ii-authentication.Rmd
@@ -51,8 +51,8 @@ This vignette explains how to do these.
 
   Complete the setup, and after a few seconds, you will be redirected to the Google API manager.
 
-3. Next, we need to enable the 'Google Drive' APIs for this project.
-  Click on "Enable APIs and Services", search for 'Google Drive', and enable.
+3. Next, we need to enable the 'Google Plus' APIs for this project.
+  Click on "Enable APIs and Services", search for 'Google+', and enable.
   
   ![](google-api-dashboard-enable1.png)
 
@@ -90,9 +90,10 @@ Ensure each these files contain all of the necessary components described below.
 
 ```{r global.R, eval=FALSE}
 library(googleAuthR)
-library(googledrive)
+library(googleID)
 
-options(googleAuthR.scopes.selected = "https://www.googleapis.com/auth/drive.readonly")
+options(googleAuthR.scopes.selected = c("https://www.googleapis.com/auth/userinfo.email",
+                                        "https://www.googleapis.com/auth/userinfo.profile"))
 options(googleAuthR.webapp.client_id = "YOUR-GOOGLE-APP-ID-STRING")
 options(googleAuthR.webapp.client_secret = "YOUR-GOOGLE-APP-SECRET")
 
@@ -100,7 +101,7 @@ options(googleAuthR.webapp.client_secret = "YOUR-GOOGLE-APP-SECRET")
 appURL <- "http://yourapp.example.com"
 
 ## your private URL to the shared file in Google Drive
-authFile <- "https://drive.google.com/file/d/XXXXXXXX/view?usp=sharing"
+authUsers <- c("user1@email.com", "user2@domain.org")
 ```
 
 ### server.R
